--- a/contact_artifact.html
+++ b/contact_artifact.html
@@ -12,12 +12,11 @@
         <nav class="navbar">
           <div class="logo">
             <img src="assets/Neko_icon.jpeg" alt="Logo">
-            <a href="/Artifact.inc/index.html">Neko Travel!</a>
+            <a href="/Artifact.inc/index.html">Artifact Ink!</a>
           </div>
           <div class="nav-links">
             <a href="/Artifact.inc/index.html">Home</a>
-            <a href="/Artifact.inc/about_neko.html">About Neko Travel</a>
-            <a href="/Artifact.inc/contact_neko.html">Contact Neko</a>
+            <a href="/Artifact.inc/about_neko.html">About Artifact Inc.</a>
           </div>
           <div class="search-bar">
             <a>                       </a><!--jankwhitespace for fomatting :3-->
@@ -27,13 +26,17 @@
         <!-- Story Section -->
         <section class="contact-form">
             <div class="page">
-                <h1 class="contact=header">CONTACT NEKOS</h1>
-                <p class="contact-subtext">Reach out to Neko</p>
+                <h1 class="contact=header">Contact Artifact Inc./h1>
+                <p class="contact-subtext">Please write your message to Artifact Inc. here...</p>
                 <form class="contact-form">
                     <input type="text" placeholder="Your Name" required="">
                     <input type="email" placeholder="Your Email" required="">
+                    <input type="ID" placeholder="Your Galactic ID number" required="">
+                    <input type="checkbox" id="rights">
+                    <label for="rights">I agree that by checking this box and pressing submit my message will be sent to the Artifact Inc. customer service team
+                        <small>and I waive my right to make any kind of complaint whether it be formal, financial, legal or otherwise.</small>
                     <textarea rows="5" placeholder="Your message here" required=""></textarea>
-                    <button type="submit">Submit :3</button>
+                    <button type="submit">Submit</button>
                 </form>
             </div>
         </section>
