--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
         <!-- Story Section -->
         <section class="story">
           <div class="story-content">
-            <h1>A WHOLE<BR>WORLD OF<br>NEKOS!</h1>
-            <p>
-              At Neko Travel we seek to fullfill all your wildest neko travel needs!
-              Whether it's the sunny neko filled beaches of Brazil, the luxurious neko baths of Japan, or the culinary delights of the European nekos!
-             <br> We have you have you covered for all your wildest nekoey dreams! Nya! :3
+            <h1>A WHOLE<BR>UNIVERSE OF<br>ADVENTURE!</h1>
+            <p>Welcome to the Artifact Inc, booking service and guide. To book your expedition, please click the link below.
+                <br> If you are here to access our state of the art interplanetary guidance please enter your search terms in the bar above.
             </p>
-            <a href="#" class="btn">BOOK NEKOS NOW</a>
+            <a href="#" class="btn">BOOK YOUR ADVENTUR TODAY!</a>
           </div>
         </section>
       
