--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neko Travel!</title>
+    <title>Artifact Inc.</title>
     <link rel="stylesheet" href="assets/neko_style.css">
 <head>
-    <body style="background-image: url('assets/neko_world.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 100vh;">
+    <body style="background-image: url('assets/background.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat; height: 100vh;">
 
         <!-- Navigation -->
         <nav class="navbar">
           <div class="logo">
-            <img src="assets/Neko_icon.jpeg" alt="Logo">
+            <img src="assets/a_logo1.jpeg" alt="Logo">
             <a href="/Artifact.inc/index.html">Artifact Inc. Exploration Guide  <!--jankwhitespace-->                                                                               </a>
           </div>
           <div class="nav-links">
@@ -20,8 +20,8 @@
             <a href="/Artifact.inc/contact_artifact.html">Contact Artifact Inc.</a>
           </div>
           <div class="search-bar">
-            <input type="text" id="searchInput" placeholder="Enter a destination or keyword...">
-            <button id="searchBtn" onclick="searchKeyword()">Search :3</button>
+            <input type="text" id="searchInput" placeholder="Enter a search term...">
+            <button id="searchBtn" onclick="searchKeyword()">Search</button>
             <button onclick="clearResults()">Clear</button>
           </div>
         </nav>
