--- a/contact_artifact.html
+++ b/contact_artifact.html
@@ -6,13 +6,13 @@
     <title>Contact Artifact Inc. CS!</title>
     <link rel="stylesheet" href="assets/neko_style.css">
 <head>
-    <body style="background-image: url('assets/neko_world.jpeg'); background-size: cover; background-position: center; height: 100vh;">
+    <body style="background-image: url('assets/background.jpeg'); background-size: cover; background-position: center; height: 100vh;">
 
         <!-- Navigation -->
         <nav class="navbar">
           <div class="logo">
             <img src="assets/Neko_icon.jpeg" alt="Logo">
-            <a href="/Artifact.inc/index.html">Artifact Ink!</a>
+            <a href="/Artifact.inc/index.html">Artifact Inc.</a>
           </div>
           <div class="nav-links">
             <a href="/Artifact.inc/index.html">Home</a>
