--- a/about_artifact.html
+++ b/about_artifact.html
@@ -6,7 +6,7 @@
     <title>Who are we?</title>
     <link rel="stylesheet" href="assets/neko_style.css">
 <head>
-    <body style="background-image: url('assets/neko_world.jpeg'); background-size: cover; background-position: center; height: 100vh;">
+    <body style="background-image: url('assets/background.jpeg'); background-size: cover; background-position: center; height: 100vh;">
 
         <!-- Navigation -->
         <nav class="navbar">
