--- a/about_artifact.html
+++ b/about_artifact.html
@@ -11,8 +11,8 @@
         <!-- Navigation -->
         <nav class="navbar">
           <div class="logo">
-            <img src="assets/Neko_icon.jpeg" alt="Logo">
-            <a href="/Artifact.inc/index.html">Neko Travel!</a>
+            <img src="assets/a_logo1.jpeg" alt="Logo">
+            <a href="/Artifact.inc/index.html">Artifact Inc.</a>
           </div>
           <div class="nav-links">
             <a href="/Artifact.inc/index.html">Home</a>
@@ -27,7 +27,7 @@
         <!-- About Section -->
         <section class="about-page">
             <div class="page">
-                <h1 class="about-header">ABOUT NEKOS</h1>
+                <h1 class="about-header">ABOUT Artifact Inc.</h1>
                 <div class="about-text">
                     <p>
                       Here at Artifact Inc. we pride ourselves on providing a unequivocal adventuring exeprience
