--- a/contact_artifact.html
+++ b/contact_artifact.html
@@ -11,7 +11,7 @@
         <!-- Navigation -->
         <nav class="navbar">
           <div class="logo">
-            <img src="assets/Neko_icon.jpeg" alt="Logo">
+            <img src="assets/a_logo1.jpeg" alt="Logo">
             <a href="/Artifact.inc/index.html">Artifact Inc.</a>
           </div>
           <div class="nav-links">
