--- a/contact_artifact.html
+++ b/contact_artifact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Artifact Inc. CS!</title>
-    <link rel="stylesheet" href="assets/neko_style.css">
+    <link rel="stylesheet" href="assets/style.css">
 <head>
     <body style="background-image: url('assets/background.jpeg'); background-size: cover; background-position: center; height: 100vh;">
 
