--- a/about_artifact.html
+++ b/about_artifact.html
@@ -16,8 +16,7 @@
           </div>
           <div class="nav-links">
             <a href="/Artifact.inc/index.html">Home</a>
-            <a href="/Artifact.inc/about_neko.html">About Neko Travel</a>
-            <a href="/Artifact.inc/contact_neko.html">Contact Neko</a>
+            <a href="/Artifact.inc/contact_neko.html">Contact Artifact Inc.</a>
           </div>
           </div>
           <div class="search-bar">
