--- a/contact_artifact.html
+++ b/contact_artifact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Artifact Inc. CS!</title>
+    <title>Contact Artifact Inc.</title>
     <link rel="stylesheet" href="assets/style.css">
 <head>
     <body style="background-image: url('assets/background.jpeg'); background-size: cover; background-position: center; height: 100vh;">
@@ -26,7 +26,7 @@
         <!-- Story Section -->
         <section class="contact-form">
             <div class="page">
-                <h1 class="contact=header">Contact Artifact Inc./h1>
+                <h1 class="contact=header">Contact Artifact Inc. Customer Service.</h1>
                 <p class="contact-subtext">Please write your message to Artifact Inc. here...</p>
                 <form class="contact-form">
                     <input type="text" placeholder="Your Name" required="">
