--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           </div>
           <div class="nav-links">
             <a href="/Artifact.inc/index.html">Home</a>
-            <a href="/Aritfact.inc/about_artifact.html">About Artifact Inc</a>
+            <a href="/Artifact.inc/about_artifact.html">About Artifact Inc</a>
             <a href="/Artifact.inc/contact_artifact.html">Contact Artifact Inc.</a>
           </div>
           <div class="search-bar">
