--- a/about_artifact.html
+++ b/about_artifact.html
@@ -26,7 +26,7 @@
         <!-- About Section -->
         <section class="about-page">
             <div class="page">
-                <h1 class="about-header">About Artifact Inc.</h1>
+                <h1> class="about-header">About Artifact Inc.</h1>
                 <div class="about-text">
                     <p>
                       Here at Artifact Inc. we pride ourselves on providing a unequivocal adventuring exeprience
