--- a/about_artifact.html
+++ b/about_artifact.html
@@ -16,7 +16,7 @@
           </div>
           <div class="nav-links">
             <a href="/Artifact.inc/index.html">Home</a>
-            <a href="/Artifact.inc/contact_neko.html">Contact Artifact Inc.</a>
+            <a href="/Artifact.inc/contact_artifact.html">Contact Artifact Inc.</a>
           </div>
           </div>
           <div class="search-bar">
@@ -26,7 +26,7 @@
         <!-- About Section -->
         <section class="about-page">
             <div class="page">
-                <h1> class="about-header">About Artifact Inc.</h1>
+                <h1 class="about-header">About Artifact Inc.</h1>
                 <div class="about-text">
                     <p>
                       Here at Artifact Inc. we pride ourselves on providing a unequivocal adventuring exeprience
