--- a/contact_artifact.html
+++ b/contact_artifact.html
@@ -16,7 +16,7 @@
           </div>
           <div class="nav-links">
             <a href="/Artifact.inc/index.html">Home</a>
-            <a href="/Artifact.inc/about_neko.html">About Artifact Inc.</a>
+            <a href="/Artifact.inc/about_artifact.html">About Artifact Inc.</a>
           </div>
           <div class="search-bar">
             <a>                       </a><!--jankwhitespace for fomatting :3-->
@@ -26,16 +26,17 @@
         <!-- Story Section -->
         <section class="contact-form">
             <div class="page">
-                <h1 class="contact=header">Contact Artifact Inc. Customer Service.</h1>
+                <h1 class="contact=header">Contact Artifact Inc.</h1>
                 <p class="contact-subtext">Please write your message to Artifact Inc. here...</p>
                 <form class="contact-form">
                     <input type="text" placeholder="Your Name" required="">
                     <input type="email" placeholder="Your Email" required="">
                     <input type="ID" placeholder="Your Galactic ID number" required="">
-                    <input type="checkbox" id="rights">
-                    <label for="rights">I agree that by checking this box and pressing submit my message will be sent to the Artifact Inc. customer service team
-                        <small>and I waive my right to make any kind of complaint whether it be formal, financial, legal or otherwise.</small>
-                    <textarea rows="5" placeholder="Your message here" required=""></textarea>
+                    <div>
+                        <label><input type="checkbox" class="check" /> I agree that by checking this box and pressing submit my message will be sent to the Artifact Inc. customer service team
+                            <small><small><small><br>and I waive my rights to make any kind of complaint whether it be formal, financial, legal or otherwise.</small></small></small></label>
+                    </div>
+                   <textarea rows="5" placeholder="Your message here" required=""></textarea>
                     <button type="submit">Submit</button>
                 </form>
             </div>
