--- a/about_artifact.html
+++ b/about_artifact.html
@@ -13,14 +13,12 @@
           <div class="logo">
             <img src="assets/a_logo1.jpeg" alt="Logo">
             <a href="/Artifact.inc/index.html">Artifact Inc.</a>
+            <img src="assets/a_logo2.jpeg" alt="Logo">
           </div>
           <div class="nav-links">
             <a href="/Artifact.inc/index.html">Home</a>
             <a href="/Artifact.inc/contact_artifact.html">Contact Artifact Inc.</a>
           </div>
-          </div>
-          <div class="search-bar">
-            <a>                       </a><!--jankwhitespace for fomatting :3-->
           </div>
         </nav>
         <!-- About Section -->
@@ -46,12 +44,14 @@
                     <div class="team-members">
                         <div class="team-member">
                             <h3>Jebediah Jones</h3>
+                            <img src="assets/jj.jpeg" alt="Jebediah">
                             <p>From small town USA Jebediah startted his business empire with just a small loan of just one hundred million dollars from his pop,
                             since then his empire has expanded in leaps and bounds into the Inc. comglomarate we know today.</p>
                             <span class="title">Founder and Director of Inc.</span>  
                         </div>
                         <div class="team-member">
                             <h3>Property Capital Jones</h3>
+                            <img src="assets/CPJ.jpeg" alt="Jebediah">
                             <p>Jebediah's daughter now runs the Artifact arm of Inc., she takes her work with the utmost seriousness,
                                 even personally seing off all new recruits. One day she hopes to take over from her pa and become the head of the company.
                             </p>
@@ -59,6 +59,7 @@
                         </div>
                         <div class="team-member">
                         <h3>Martheseus Marvers</h3>
+                        <img src="assets/mm.jpeg" alt="Jebediah">
                         <p>Getting their start in the crytalium industry. Marvers quickly found their footing in a diverse range of finance goods and assets,
                             now one of the leading financial advisors in within the Sagittarius-Carina Arm.
                             <br>Artifact Inc.'s entire finacial structure and ever increasing profit are all a product of Marvers' fantastic work!
@@ -67,14 +68,10 @@
                         </div>
                     </div>
                 </div>
-                  <p><small>*Legal Disclaimer: Planetary AI was built upon and trained using a combination of 80s era adventure films and 60s era sci-fi television shows,
+                  <p><br></br><small>*Legal Disclaimer: Planetary AI was built upon and trained using a combination of 80s era adventure films and 60s era sci-fi television shows,
                         it has no ties to the scientific or research communities.<br>
                     **Expeditions are only safe if you do not depart from the Artifact Inc. travel craft.<br>
-                    ***At least 50% of all profits will be held by Inc. Financial Insurances Ltd.</small><small>*Legal Disclaimer: Planetary AI was built upon and trained using a combination of 80s era adventure films and 60s era sci-fi television shows,
-                        it has no ties to the scientific or research communities.<br>
-                    **Expeditions are only safe if you do not depart from the Artifact Inc. travel craft.<br>
-                    ***At least 50% of all profits will be held by Inc. Financial Insurances Ltd.</small></p>
-        </section>
+                    ***At least 50% of all profits will be held by Inc. Financial Insurances Ltd.</small><small>
       
         <script src="artifact.js"></script>
       
